nettoyage de la classe Atelier.java